sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:11: error: not found: value i
    while(n!=i-1 || t==0 ){
             ^AlgInsertionSort:12: error: not found: value i
          if (plusPetitQue(i-n,v)){
                           ^AlgInsertionSort:14: error: not enough arguments for method setValeur: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
              setValeur(i-n)
                       ^