sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n = 0
  var t = 0
  var v = 0
  var lgr=getNombreValeurs()-1
  for( i <- 1 to lgr){
    v= getValeur(i)
   	n = 0;
    t = 0}
  	while(n!=i-1 || t==0 ){
      		if (plusPetitQue(i-n,v)){
            	t=1
            	setValeur(i-n)
            t=1}
          else{
            n+=1
                    }
          }
  	   }
    
  

